--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="row gradient">
     <div class="col-sm-8 col-sm-offset-2 relative title">
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-sm-12">
         <img src="jockman.png" alt="" class="img-responsive jockman">
               </div>
             </div>
@@ -36,7 +36,7 @@
 
 
       <div class="row blue">
-        <div class="col-md-8 col-md-offset-2 comic-strip">
+        <div class="col-sm-8 col-sm-offset-2 comic-strip">
           <div class="empty relative">
 
           <p class="text top-left">...all is well at Geeksville</p>
@@ -47,7 +47,7 @@
       </div>
 
       <div class="row margin">
-        <div class="col-md-4 col-md-offset-2">
+        <div class="col-sm-4 col-sm-offset-2">
           <div class="empty relative">
           <p class="happy-monkey">...Alien<br> Invasion!</p>
           <div class="speech-bubble1"> <p class="text-center caption1">Someone <br>help us!</p> </div>
@@ -56,7 +56,7 @@
         </div>
         </div>
 
-        <div class="col-md-4 ">
+        <div class="col-sm-4 ">
           <div class="row">
             <div class="col-sm-12">
               <div class="empty relative">
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-sm-12">
               <div class="empty relative alien">
               <img src="alien-closeup.jpg" alt="" class="close-up img-responsive">
               <div class="speech-bubble2"> <p class="text-center caption2">zurp!<br> zurp!</p> </div>
@@ -77,20 +77,20 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-8 col-sm-offset-2">
-          <div class="col-sm-4">
+        <div class="col-xs-8 col-xs-offset-2">
+          <div class="col-sm-4 no-padding">
             <div class="empty">
               <img src="eye.jpg" class="img-responsive" alt="">
               </div>
           </div>
 
-          <div class="col-sm-4">
+          <div class="col-sm-4 no-padding">
             <div class="empty">
               <img src="package.jpg" class="img-responsive" alt="">
               </div>
           </div>
 
-          <div class="col-sm-4">
+          <div class="col-sm-4 no-padding">
             <div class="empty">
               <img src="foot.jpg" class="img-responsive" alt="">
               </div>
