media query display

--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
 
       <div class="row blue">
         <div class="col-sm-8 col-sm-offset-2 comic-strip">
-          <div class="empty relative">
+          <div class="empty relative display-desktop">
 
           <p class="text top-left">...all is well at Geeksville</p>
           <p class="text bottom-right">...or so we thought</p>
           <img src="comic-hero.jpg" alt="" class="image1 img-responsive">
             </div>
+
+            <div class="empty relative display-mobile">
+
+            <p class="text top-left">...all is well at Geeksville</p>
+            <p class="text bottom-right">...or so we thought</p>
+            <img src="city-closeup.jpg" alt="" class="image1 img-responsive">
+              </div>
         </div>
       </div>
 
