--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114220846-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114220846-1');
+</script>
+
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Adventures of Jockman - A responsive web comic">
+<meta name="keywords, " content="comic, illustration, vector, vector illustration, web-comic, web comic, comic book, super hero, hero, cartoon, jock, man, jockman, adventures, of">
+<meta name="author" content="Felipe Hernandez">
     <!-- User Stylesheets -->
     <link rel=stylesheet href="vendors/css/normalize.min.css">
     <link rel=stylesheet href="resources/css/style.css">
@@ -12,7 +25,7 @@
       <link href="https://fonts.googleapis.com/css?family=Bangers|Happy+Monkey|Patrick+Hand" rel="stylesheet">
 
 
-    <title>Document</title>
+    <title>Jockman Adventures</title>
 </head>
 <body>
   <div class="container-fluid">
@@ -144,6 +157,7 @@
 
     <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js">
     </script>
+
 
 </body>
 </html>
